<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This file is part of kdk. It is subject to the license terms in the LICENSE file found in the top-level
  ~ directory of this distribution and at http://creativecommons.org/publicdomain/zero/1.0/. No part of kdk,
  ~ including this file, may be copied, modified, propagated, or distributed except according to the terms contained
  ~ in the LICENSE file.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ordering follows https://maven.apache.org/developers/conventions/code.html#POM_Code_Convention -->

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                                 PARENT                                  -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Inheritance -->
    <parent>
        <groupId>wtf.metio.kdk</groupId>
        <artifactId>kdk</artifactId>
        <version>${revision}</version>
    </parent>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                               COORDINATES                               -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Maven_Coordinates -->
    <artifactId>kdk-construct</artifactId>
    <packaging>jar</packaging>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                               DEPENDENCIES                              -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.immutables</groupId>
            <artifactId>value</artifactId>
            <version>${version.immutables}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.32</version>
        </dependency>
    </dependencies>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                                   BUILD                                 -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Build -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.immutables</groupId>
                            <artifactId>value-processor</artifactId>
                            <version>${version.immutables}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <argLine>
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.construct=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.construct.config=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.construct.meta=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.construct.service=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.construct.workloads=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.serialize=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.stack=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.validate=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.validate.config=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.validate.meta=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.validate.service=ALL-UNNAMED
                        --add-opens wtf.metio.kdk.construct/wtf.metio.kdk.validate.workloads=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${version.m-assembly-p}</version>
                <executions>
                    <execution>
                        <id>jshell-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>${project.basedir}/src/main/assembly/jshell.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
